# adk-scratch-course

./: .flake8  .hadolint.yaml  .markdownlint.yml  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  documentation.yml  release.yml
agents/demo2/: .env.template  agent.py
agents/multi_tool_agent/: .env.template  agent.py
agents/my_first_agent/: agent.py
docs/: agent_development.md  agent_development_advanced.md  conf.py  index.md  quickstart.md
lessons/lesson-01/: README.md
lessons/lesson-02/: README.md
lessons/lesson-03/: README.md
src/adk/: __init__.py  _version.py  adk_integration.py  cli.py  core.py  exceptions.py  setup.py  utils.py  validation.py
src/adk_course/: __init__.py  _version.py  cli.py  core.py  exceptions.py  setup.py  utils.py  validation.py
tests/: conftest.py
tests/unit/: test_adk_integration.py  test_cli_commands.py  test_core.py  test_utils.py
